--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Orión X - Buscador de Música</title>
+  <title>PlayYoutube By Wirk 👻</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -43,7 +43,7 @@
 
   <header class="header">
     <h1 class="logo">
-      <i class="fas fa-music"></i> Orion-X
+      <i class="fas fa-music"></i> PlayYoutube By Wirk 👻
     </h1>
     <button id="menu-button" class="menu-button">☰</button>
   </header>
