--- a/index.html
+++ b/index.html
@@ -7,161 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
-    /* Estilos generales */
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #1e1e1e;
-      color: #e0ffe0;
-      padding-bottom: 90px;
-      overflow-x: hidden;
-      position: relative;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Estilo del encabezado */
-    header {
-      background-color: #1a4d2e;
-      color: #00ff00;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
-    }
-
-    .logo {
-      font-size: 1.8rem;
-      display: flex;
-      align-items: center;
-    }
-
-    .logo i {
-      margin-right: 10px;
-    }
-
-    .menu-button {
-      font-size: 28px;
-      background-color: transparent;
-      border: none;
-      color: #00ff00;
-      cursor: pointer;
-    }
-
-    /* Menú lateral */
-    .side-menu {
-      position: fixed;
-      top: 0;
-      left: -300px;
-      width: 300px;
-      height: 100%;
-      background-color: #1a4d2e;
-      color: #e0ffe0;
-      transition: 0.3s ease;
-      padding: 20px;
-      box-shadow: 4px 0 12px rgba(0, 0, 0, 0.6);
-    }
-
-    .side-menu.open {
-      left: 0;
-    }
-
-    .side-menu h2 {
-      color: #00ff00;
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-    }
-
-    .side-menu button {
-      background-color: #25D366;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 12px;
-      margin-bottom: 10px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      cursor: pointer;
-      font-weight: bold;
-      width: 100%;
-    }
-
-    /* Estilo del formulario de búsqueda */
-    #search-form {
-      margin: 20px 0;
-      text-align: center;
-    }
-
-    #search-form input {
-      padding: 10px;
-      width: 80%;
-      border-radius: 8px;
-      border: 2px solid #4CAF50;
-      margin-right: 10px;
-      background-color: #333;
-      color: #fff;
-    }
-
-    #search-form button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    /* Estilo de la lista de música */
-    .music-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .music-item {
-      background-color: #333;
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      width: 200px;
-      color: #fff;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .music-item:hover {
-      transform: scale(1.05);
-      box-shadow: 0 4px 15px rgba(0, 255, 0, 0.7);
-    }
-
-    /* Estilo de la animación de carga */
-    #loading-message {
-      display: none;
-      text-align: center;
-      font-size: 1.2rem;
-      color: #4CAF50;
-    }
-
-    .loader {
-      margin: 20px auto;
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #4CAF50;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 2s linear infinite;
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    /* Estilo del reproductor de audio */
     #audio-player {
       display: none;
       position: fixed;
@@ -170,12 +15,61 @@
       transform: translateX(-50%);
       width: 100%;
       max-width: 800px;
-      background-color: #1a4d2e;
+      background-color: #222;
       padding: 12px;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
       box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4);
       z-index: 1000;
+    }
+
+    /* Estilos para el menú lateral */
+    #side-menu {
+      position: fixed;
+      top: 0;
+      right: -250px;
+      width: 250px;
+      height: 100%;
+      background-color: #25D366;
+      transition: right 0.3s ease;
+      padding: 20px;
+      z-index: 1001;
+    }
+    #side-menu.open {
+      right: 0;
+    }
+    #close-menu {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 20px;
+      cursor: pointer;
+      color: white;
+    }
+    #side-menu h2 {
+      color: white;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    #side-menu button {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 15px;
+      background-color: #34B7F1; /* Botón más pequeño */
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      margin-bottom: 10px;
+      font-size: 14px; /* Tamaño de fuente más pequeño */
+    }
+    #side-menu button i {
+      font-size: 18px;
+    }
+    #side-menu button:hover {
+      background-color: #128C7E;
     }
   </style>
 </head>
@@ -184,31 +78,36 @@
   <div id="side-menu" class="side-menu">
     <button id="close-menu" class="close-button">✖</button>
     <h2>Info</h2>
+
     <button onclick="window.location.href='https://wa.me/50493732693'">
-      <i class="fab fa-whatsapp"></i> Owner 👻
+      <i class="fab fa-whatsapp"></i>
+      Owner 👻
     </button>
+
     <button onclick="window.location.href='https://whatsapp.com/channel/0029Vb5UfTC4CrfeKSamhp1f'">
-      <i class="fas fa-bullhorn"></i> Canal Ofc De WhatsApp 🐻‍❄️
+      <i class="fas fa-bullhorn"></i>
+      Canal Ofc De WhatsApp 🐻‍❄️
     </button>
   </div>
 
-  <!-- Encabezado -->
-  <header>
+  <header class="header">
     <h1 class="logo">
       <i class="fas fa-music"></i> PlayYoutube By Wirk 👻
     </h1>
     <button id="menu-button" class="menu-button">☰</button>
   </header>
 
-  <!-- Contenedor principal -->
   <div class="container">
     <form id="search-form">
       <input type="text" id="search-input" placeholder="Buscar canciones o artistas 🌻" required />
       <button type="submit">Buscar</button>
     </form>
 
-    <div id="loading-message">
-      <div class="loader"></div>
+    <div id="loading-message" style="display: none;">
+      <div class="loader">
+        <span></span><span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
       <p id="loading-text">Buscando tu música 👻...</p>
     </div>
 
@@ -217,7 +116,6 @@
     </div>
   </div>
 
-  <!-- Reproductor de audio -->
   <audio id="audio-player" controls></audio>
 
   <script src="api.js"></script>
