--- a/index.html
+++ b/index.html
@@ -3,10 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PlayYoutube By Wirk 👻 = Disfruta</title>
+  <title>PlayYoutube By Wirk 👻</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
+    /* Reset básico */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f2f5;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    .header {
+      background-color: #25D366;
+      color: white;
+      padding: 12px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      font-size: 20px;
+    }
+    .menu-button {
+      background: none;
+      border: none;
+      font-size: 24px;
+      color: white;
+      cursor: pointer;
+    }
+
+    .container {
+      padding: 20px;
+      flex: 1;
+    }
+
+    #search-form {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    #search-input {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      border: 2px solid #25D366;
+      border-radius: 8px;
+    }
+
+    #search-form button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #25D366;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    #search-form button:hover {
+      background-color: #128C7E;
+    }
+
+    .music-list {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    #loading-message {
+      text-align: center;
+      margin-top: 20px;
+      color: #333;
+    }
+
     #audio-player {
       display: none;
       position: fixed;
@@ -14,108 +92,134 @@
       left: 50%;
       transform: translateX(-50%);
       width: 100%;
-      max-width: 800px;
+      max-width: 500px;
       background-color: #222;
-      padding: 12px;
+      padding: 10px;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
-      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.5);
       z-index: 1000;
     }
 
-    /* Estilos para el menú lateral */
+    /* Menú lateral pequeño y elegante */
     #side-menu {
       position: fixed;
       top: 0;
-      right: -250px;
-      width: 250px;
+      right: -220px;
+      width: 220px;
       height: 100%;
       background-color: #25D366;
+      padding: 20px 15px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
       transition: right 0.3s ease;
-      padding: 20px;
       z-index: 1001;
     }
     #side-menu.open {
       right: 0;
     }
     #close-menu {
-      position: absolute;
-      top: 10px;
-      right: 10px;
+      align-self: flex-end;
+      background: none;
+      border: none;
       font-size: 20px;
-      cursor: pointer;
       color: white;
+      cursor: pointer;
     }
     #side-menu h2 {
+      font-size: 18px;
       color: white;
-      font-size: 20px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     #side-menu button {
       display: flex;
       align-items: center;
       gap: 8px;
-      padding: 8px 15px;
-      background-color: #34B7F1; /* Botón más pequeño */
-      color: white;
+      background-color: white;
+      color: #25D366;
       border: none;
-      border-radius: 8px;
-      cursor: pointer;
+      border-radius: 6px;
+      padding: 8px 10px;
+      font-size: 14px;
       font-weight: bold;
-      margin-bottom: 10px;
-      font-size: 14px; /* Tamaño de fuente más pequeño */
-    }
-    #side-menu button i {
-      font-size: 18px;
+      cursor: pointer;
+      transition: background 0.3s;
     }
     #side-menu button:hover {
-      background-color: #128C7E;
+      background-color: #d4f5e7;
+    }
+    #side-menu button i {
+      font-size: 16px;
+    }
+
+    /* Loader sencillo */
+    .loader {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+    }
+    .loader span {
+      width: 8px;
+      height: 8px;
+      margin: 0 4px;
+      background: #25D366;
+      border-radius: 50%;
+      animation: bounce 1.2s infinite alternate;
+    }
+    .loader span:nth-child(2) { animation-delay: 0.2s; }
+    .loader span:nth-child(3) { animation-delay: 0.4s; }
+
+    @keyframes bounce {
+      from { transform: translateY(0); }
+      to { transform: translateY(-10px); }
     }
   </style>
 </head>
 <body>
-  <!-- Menú lateral -->
-  <div id="side-menu" class="side-menu">
-    <button id="close-menu" class="close-button">✖</button>
-    <h2>Info</h2>
 
-    <button onclick="window.location.href='https://wa.me/50493732693'">
-      <i class="fab fa-whatsapp"></i>
-      Owner 👻
+  <!-- Menú lateral -->
+  <div id="side-menu">
+    <button id="close-menu">✖</button>
+    <h2>Información</h2>
+
+    <button onclick="window.open('https://wa.me/50493732693', '_blank')">
+      <i class="fab fa-whatsapp"></i> Owner
     </button>
 
-    <button onclick="window.location.href='https://whatsapp.com/channel/0029Vb5UfTC4CrfeKSamhp1f'">
-      <i class="fas fa-bullhorn"></i>
-      Canal Ofc De WhatsApp 🐻‍❄️
+    <button onclick="window.open('https://whatsapp.com/channel/0029Vb5UfTC4CrfeKSamhp1f', '_blank')">
+      <i class="fas fa-bullhorn"></i> Canal Oficial
     </button>
   </div>
 
+  <!-- Encabezado -->
   <header class="header">
     <h1 class="logo">
-      <i class="fas fa-music"></i> PlayYoutube By Wirk 👻
+      <i class="fas fa-music"></i> PlayYoutube By Wirk
     </h1>
     <button id="menu-button" class="menu-button">☰</button>
   </header>
 
+  <!-- Contenido -->
   <div class="container">
     <form id="search-form">
-      <input type="text" id="search-input" placeholder="Buscar canciones o artistas 🌻" required />
+      <input type="text" id="search-input" placeholder="Buscar canciones o artistas..." required />
       <button type="submit">Buscar</button>
     </form>
 
     <div id="loading-message" style="display: none;">
       <div class="loader">
-        <span></span><span></span><span></span><span></span><span></span><span></span>
-        <span></span><span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span>
       </div>
-      <p id="loading-text">Buscando tu música 👻...</p>
+      <p id="loading-text">Buscando música...</p>
     </div>
 
     <div class="music-list" id="music-list">
-      <!-- Aquí se insertarán las canciones -->
+      <!-- Aquí se insertan canciones -->
     </div>
   </div>
 
+  <!-- Reproductor de audio -->
   <audio id="audio-player" controls></audio>
 
   <script src="api.js"></script>
@@ -123,6 +227,8 @@
     const menuBtn = document.getElementById("menu-button");
     const closeBtn = document.getElementById("close-menu");
     const sideMenu = document.getElementById("side-menu");
+    const audioPlayer = document.getElementById('audio-player');
+    const loadingText = document.getElementById('loading-text');
 
     menuBtn.onclick = () => sideMenu.classList.add("open");
     closeBtn.onclick = () => sideMenu.classList.remove("open");
@@ -137,14 +243,13 @@
       audioPlayer.style.display = "none";
     });
 
-    // ANIMACIÓN DE CARGA (puntos ...)
-    const loadingText = document.getElementById('loading-text');
+    // Animación de "Buscando música..."
     let dotCount = 0;
     setInterval(() => {
-      dotCount = (dotCount + 1) % 4; // 0, 1, 2, 3
-      let dots = '.'.repeat(dotCount);
-      loadingText.textContent = `Buscando música${dots}`;
+      dotCount = (dotCount + 1) % 4;
+      loadingText.textContent = `Buscando música${'.'.repeat(dotCount)}`;
     }, 500);
   </script>
+
 </body>
 </html>
