--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
     <h2>Información</h2>
 
     <button onclick="window.open('https://wa.me/50493732693', '_blank')">
-      <i class="fab fa-whatsapp"></i> Contactar Creador
+      <i class="fab fa-whatsapp"></i> Owner 👾
     </button>
 
     <button onclick="window.open('https://whatsapp.com/channel/0029Vb5UfTC4CrfeKSamhp1f', '_blank')">
-      <i class="fas fa-bullhorn"></i> Canal Oficial
+      <i class="fas fa-bullhorn"></i> Canal Ofc
     </button>
   </div>
 
