--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PlayYoutube By Wirk 👾</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <title>PlayYoutube By Wirk 👻</title>
+  <link rel="stylesheet" href="styles.css" /> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     /* Estilos para el reproductor de audio fijo */
     #audio-player {
@@ -26,14 +25,12 @@
 
     /* Estilos para el cargador de animación */
     .loader {
-      /* Mantener estilos del cargador si son complejos,
-         o ajustar colores si son CSS variables en styles.css */
+      /* Si los puntos del cargador son rojos y quieres que sean verdes,
+         debes cambiar su estilo en styles.css, probablemente en una regla para .loader span */
     }
 
-    /* Añadido: Estilo para cambiar el color del icono del menú a verde si estuviera rojo en styles.css */
-    /* Si el icono del menú está definido en styles.css con un color rojo, necesitas cambiarlo allí. */
-    /* Como alternativa, si es solo el texto/icono dentro del botón, podrías intentar añadir una clase o estilo inline */
-    /* Si el botón #menu-button en styles.css tiene un background-color rojo, cámbialo también allí. */
+    /* Comentario: Si el icono del menú (☰) o su fondo son rojos, el cambio debe hacerse en styles.css,
+       buscando la regla para #menu-button o .menu-button */
 
   </style>
 </head>
@@ -77,15 +74,14 @@
 
 <audio id="audio-player" controls></audio>
 
-<script src="api.js"></script>
-<script>
+<script src="api.js"></script> <script>
   const menuBtn = document.getElementById("menu-button");
   const closeBtn = document.getElementById("close-menu");
   const sideMenu = document.getElementById("side-menu");
-  const audioPlayer = document.getElementById("audio-player"); // Asegúrate de obtener el reproductor
+  const audioPlayer = document.getElementById("audio-player");
 
-  // La visibilidad del menú lateral y sus contenidos depende de los estilos en styles.css
-  // para las clases .side-menu y .side-menu.open
+  // Este JavaScript añade/quita la clase 'open'. Los estilos que hacen que el menú sea visible
+  // cuando tiene la clase 'open' deben estar en styles.css
   menuBtn.onclick = () => sideMenu.classList.add("open");
   closeBtn.onclick = () => sideMenu.classList.remove("open");
 
@@ -104,14 +100,13 @@
   // ANIMACIÓN DE CARGA (puntos ...)
   const loadingText = document.getElementById('loading-text');
   let dotCount = 0;
-  setInterval(() => {
-    dotCount = (dotCount + 1) % 4; // Cycle between 0, 1, 2, 3 dots
-    let dots = '.'.repeat(dotCount);
-    loadingText.textContent = `Buscando la canción perfecta${dots}`; // Usa el texto actualizado
-  }, 500);
-
-  // Posiblemente necesites más lógica aquí para manejar la búsqueda
-  // y la inserción de resultados en #music-list, que probablemente está en api.js
+  // setInterval(() => { // Desactiva o ajusta si interfiere con la lógica de carga real
+  //   dotCount = (dotCount + 1) % 4; // Cycle between 0, 1, 2, 3 dots
+  //   let dots = '.'.repeat(dotCount);
+  //   loadingText.textContent = `Buscando la canción perfecta${dots}`; // Usa el texto actualizado
+  // }, 500);
+  // Nota: Asegúrate de que el script de api.js maneje la visualización y ocultación
+  // del #loading-message correctamente basándose en el estado de la búsqueda.
 </script>
 </body>
 </html>
