--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PlayYoutube By Wirk 👻</title>
+  <title>ThePlayYoutube By Wirk 👻</title>
   <link rel="stylesheet" href="styles.css" /> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     /* Estilos para el reproductor de audio fijo */
@@ -65,7 +65,7 @@
       <span></span><span></span><span></span><span></span><span></span><span></span>
       <span></span><span></span><span></span><span></span><span></span><span></span>
     </div>
-    <p id="loading-text">Buscando la canción perfecta...</p>
+    <p id="loading-text">Buscando...</p>
   </div>
 
   <div class="music-list" id="music-list">
