--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ThePlayYoutube By Wirk 👻</title>
-  <link rel="stylesheet" href="styles.css" /> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <title>ThePlayYoutube By Wirk</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     /* Estilos para el reproductor de audio fijo */
     #audio-player {
@@ -14,99 +15,125 @@
       left: 50%;
       transform: translateX(-50%);
       width: 100%;
-      max-width: 800px; /* Ajusta el ancho máximo según necesites */
-      background-color: #222; /* Fondo oscuro para contraste */
+      max-width: 800px;
+      background-color: #222;
       padding: 12px;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
       box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4);
-      z-index: 1000; /* Asegura que esté por encima de otros elementos */
+      z-index: 1000;
     }
 
-    /* Estilos para el cargador de animación */
-    .loader {
-      /* Si los puntos del cargador son rojos y quieres que sean verdes,
-         debes cambiar su estilo en styles.css, probablemente en una regla para .loader span */
+    /* Estilos para el cargador de animación (verde en vez de rojo) */
+    .loader span {
+      display: inline-block;
+      width: 8px;
+      height: 8px;
+      margin: 3px;
+      background-color: #25D366; /* Verde WhatsApp */
+      border-radius: 50%;
+      animation: loaderAnim 1s infinite alternate;
     }
 
-    /* Comentario: Si el icono del menú (☰) o su fondo son rojos, el cambio debe hacerse en styles.css,
-       buscando la regla para #menu-button o .menu-button */
+    @keyframes loaderAnim {
+      from {
+        transform: scale(1);
+        opacity: 1;
+      }
+      to {
+        transform: scale(1.5);
+        opacity: 0.5;
+      }
+    }
 
+    /* Estilo para el menú botón si era rojo antes */
+    #menu-button {
+      background: none;
+      border: none;
+      font-size: 24px;
+      color: #25D366; /* Color verde */
+      cursor: pointer;
+    }
+
+    /* Estilo para el botón de cerrar */
+    .close-button {
+      background: none;
+      border: none;
+      font-size: 24px;
+      color: #25D366; /* Verde también */
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <div id="side-menu" class="side-menu">
-  <button id="close-menu" class="close-button" style="color: green;">✖</button>
-  <h2>Info de Contacto</h2>
-  <button onclick="window.location.href='https://wa.me/50433191934'" style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background-color: #25D366; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px;">
-    <i class="fab fa-whatsapp" style="font-size: 20px;"></i>
-    Contacta al Creador
-  </button>
-  <button onclick="window.location.href='https://whatsapp.com/channel/0029VawF8fBBvvsktcInIz3m'" style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background-color: #25D366; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold;">
-    <i class="fas fa-bullhorn" style="font-size: 20px;"></i>
-    Únete al Canal Oficial
-  </button>
+    <button id="close-menu" class="close-button">✖</button>
+    <h2>Info de Contacto</h2>
+    <button onclick="window.location.href='https://wa.me/50433191934'" style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background-color: #25D366; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px;">
+      <i class="fab fa-whatsapp" style="font-size: 20px;"></i>
+      Contacta al Creador
+    </button>
+    <button onclick="window.location.href='https://whatsapp.com/channel/0029VawF8fBBvvsktcInIz3m'" style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background-color: #25D366; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold;">
+      <i class="fas fa-bullhorn" style="font-size: 20px;"></i>
+      Únete al Canal Oficial
+    </button>
   </div>
 
-<header class="header">
-  <h1 class="logo">
-    <i class="fas fa-music"></i> PlayYoutube By Wirk 👻 </h1>
-  <button id="menu-button" class="menu-button">☰</button>
-</header>
+  <header class="header">
+    <h1 class="logo">
+      <i class="fas fa-music" style="color: #25D366;"></i> PlayYoutube By Wirk
+    </h1>
+    <button id="menu-button" class="menu-button">☰</button>
+  </header>
 
-<div class="container">
-  <form id="search-form">
-    <input type="text" id="search-input" placeholder=" ¡Busca tu música favorita ahora! 🎧" required />
-    <button type="submit">Buscar</button>
-  </form>
+  <div class="container">
+    <form id="search-form">
+      <input type="text" id="search-input" placeholder="¡Busca tu música favorita ahora! 🎧" required />
+      <button type="submit" style="background-color: #25D366; color: white; border: none; border-radius: 8px; padding: 8px 16px;">Buscar</button>
+    </form>
 
-  <div id="loading-message" style="display: none;">
-    <div class="loader">
-      <span></span><span></span><span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span><span></span><span></span>
+    <div id="loading-message" style="display: none;">
+      <div class="loader">
+        <span></span><span></span><span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <p id="loading-text">Buscando...</p>
     </div>
-    <p id="loading-text">Buscando...</p>
+
+    <div class="music-list" id="music-list"></div>
   </div>
 
-  <div class="music-list" id="music-list">
-    </div>
-</div>
+  <audio id="audio-player" controls></audio>
 
-<audio id="audio-player" controls></audio>
+  <script src="api.js"></script>
+  <script>
+    const menuBtn = document.getElementById("menu-button");
+    const closeBtn = document.getElementById("close-menu");
+    const sideMenu = document.getElementById("side-menu");
+    const audioPlayer = document.getElementById("audio-player");
 
-<script src="api.js"></script> <script>
-  const menuBtn = document.getElementById("menu-button");
-  const closeBtn = document.getElementById("close-menu");
-  const sideMenu = document.getElementById("side-menu");
-  const audioPlayer = document.getElementById("audio-player");
+    menuBtn.onclick = () => sideMenu.classList.add("open");
+    closeBtn.onclick = () => sideMenu.classList.remove("open");
 
-  // Este JavaScript añade/quita la clase 'open'. Los estilos que hacen que el menú sea visible
-  // cuando tiene la clase 'open' deben estar en styles.css
-  menuBtn.onclick = () => sideMenu.classList.add("open");
-  closeBtn.onclick = () => sideMenu.classList.remove("open");
+    function reproducirCancion(url) {
+      audioPlayer.src = url;
+      audioPlayer.style.display = "block";
+      audioPlayer.play();
+    }
 
-  // Esta función asume que 'url' es la URL directa del archivo de audio
-  function reproducirCancion(url) {
-    audioPlayer.src = url;
-    audioPlayer.style.display = "block"; // Muestra el reproductor
-    audioPlayer.play(); // Inicia la reproducción
-  }
+    audioPlayer.addEventListener("ended", () => {
+      audioPlayer.style.display = "none";
+    });
 
-  // Oculta el reproductor cuando la canción termina
-  audioPlayer.addEventListener("ended", () => {
-    audioPlayer.style.display = "none";
-  });
-
-  // ANIMACIÓN DE CARGA (puntos ...)
-  const loadingText = document.getElementById('loading-text');
-  let dotCount = 0;
-  // setInterval(() => { // Desactiva o ajusta si interfiere con la lógica de carga real
-  //   dotCount = (dotCount + 1) % 4; // Cycle between 0, 1, 2, 3 dots
-  //   let dots = '.'.repeat(dotCount);
-  //   loadingText.textContent = `Buscando la canción perfecta${dots}`; // Usa el texto actualizado
-  // }, 500);
-  // Nota: Asegúrate de que el script de api.js maneje la visualización y ocultación
-  // del #loading-message correctamente basándose en el estado de la búsqueda.
-</script>
+    const loadingText = document.getElementById('loading-text');
+    let dotCount = 0;
+    /*
+    setInterval(() => {
+      dotCount = (dotCount + 1) % 4;
+      let dots = '.'.repeat(dotCount);
+      loadingText.textContent = `Buscando la canción perfecta${dots}`;
+    }, 500);
+    */
+  </script>
 </body>
 </html>
