--- a/index.html
+++ b/index.html
@@ -2,137 +2,14 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ThePlayYoutube By Wirk 💛</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ThePlayYoutube By Wirk 👻</title>
+
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #d4f5d0; /* verde muy clarito de fondo */
-      color: #064420; /* verde oscuro para los textos */
-    }
-
-    /* Header */
-    .header {
-      background-color: #25D366; /* verde WhatsApp */
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo {
-      font-size: 24px;
-      color: white;
-    }
-
-    .menu-button {
-      background: none;
-      border: none;
-      font-size: 28px;
-      color: white;
-      cursor: pointer;
-    }
-
-    /* Menú lateral */
-    .side-menu {
-      position: fixed;
-      top: 0;
-      left: -250px;
-      width: 250px;
-      height: 100%;
-      background-color: #1b8e5a; /* verde oscuro para el menú */
-      padding: 20px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.5);
-      transition: left 0.3s;
-      z-index: 999;
-    }
-
-    .side-menu.open {
-      left: 0;
-    }
-
-    .close-button {
-      background: none;
-      border: none;
-      font-size: 24px;
-      color: white;
-      cursor: pointer;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-
-    /* Botones en el menú */
-    .side-menu button {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #25D366;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    /* Contenedor principal */
-    .container {
-      padding: 20px;
-    }
-
-    /* Formulario de búsqueda */
-    #search-form {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
-
-    #search-input {
-      flex: 1;
-      padding: 10px;
-      border: 2px solid #25D366;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-
-    #search-form button {
-      background-color: #25D366;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 20px;
-      cursor: pointer;
-    }
-
-    /* Loader */
-    .loader span {
-      display: inline-block;
-      width: 10px;
-      height: 10px;
-      margin: 4px;
-      background-color: #25D366;
-      border-radius: 50%;
-      animation: loaderAnim 1s infinite alternate;
-    }
-
-    @keyframes loaderAnim {
-      from {
-        transform: scale(1);
-        opacity: 1;
-      }
-      to {
-        transform: scale(1.5);
-        opacity: 0.5;
-      }
-    }
-
-    /* Player de audio */
+    /* Estilos para el reproductor de audio fijo */
     #audio-player {
       display: none;
       position: fixed;
@@ -142,36 +19,151 @@
       width: 100%;
       max-width: 800px;
       background-color: #1b8e5a; /* Verde oscuro */
-      padding: 10px;
+      padding: 12px;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
-      box-shadow: 0 -2px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.4);
       z-index: 1000;
+    }
+
+    /* Estilos para el menú lateral */
+    .side-menu {
+      position: fixed;
+      top: 0;
+      left: -260px;
+      width: 250px;
+      height: 100%;
+      background-color: #1b8e5a; /* Verde oscuro */
+      padding: 20px;
+      box-shadow: 2px 0 10px rgba(0, 0, 0, 0.5);
+      transition: left 0.3s ease;
+      z-index: 9999;
+      overflow-y: auto;
+    }
+
+    .side-menu.open {
+      left: 0;
+    }
+
+    /* Estilos del botón de cerrar */
+    .close-button {
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      margin-bottom: 20px;
+      color: white;
+    }
+
+    /* Estilos del header */
+    .header {
+      background-color: #1b8e5a;
+      color: white;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 24px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .menu-button {
+      background: none;
+      border: none;
+      font-size: 30px;
+      cursor: pointer;
+      color: white;
+    }
+
+    /* Estilos del contenedor principal */
+    .container {
+      padding: 20px;
+    }
+
+    /* Estilos del formulario de búsqueda */
+    #search-form {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+    }
+
+    #search-input {
+      flex: 1;
+      padding: 10px;
+      border: 2px solid #1b8e5a;
+      border-radius: 8px;
+      outline: none;
+    }
+
+    #search-form button {
+      padding: 10px 20px;
+      background-color: #1b8e5a;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    /* Estilos del cargador */
+    .loader span {
+      display: inline-block;
+      width: 8px;
+      height: 8px;
+      margin: 3px;
+      background-color: #1b8e5a; /* Color verde para puntos de carga */
+      border-radius: 50%;
+      animation: loader-animation 1s infinite alternate;
+    }
+
+    @keyframes loader-animation {
+      from { transform: scale(1); }
+      to { transform: scale(1.5); }
+    }
+
+    #loading-message {
+      text-align: center;
+      margin-top: 20px;
+      color: #1b8e5a;
     }
   </style>
 </head>
+
 <body>
+
   <div id="side-menu" class="side-menu">
     <button id="close-menu" class="close-button">✖</button>
-    <h2 style="color:white;">Info de Contacto</h2>
-    <button onclick="window.location.href='https://wa.me/50433191934'">
-      <i class="fab fa-whatsapp"></i> Contacta al Creador
+    <h2 style="color: white;">Info de Contacto</h2>
+
+    <button onclick="window.location.href='https://wa.me/50433191934'"
+      style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background-color: #25D366; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; margin-bottom: 10px;">
+      <i class="fab fa-whatsapp" style="font-size: 20px;"></i>
+      Contacta al Creador
     </button>
-    <button onclick="window.location.href='https://whatsapp.com/channel/0029VawF8fBBvvsktcInIz3m'">
-      <i class="fas fa-bullhorn"></i> Únete al Canal Oficial
+
+    <button onclick="window.location.href='https://whatsapp.com/channel/0029VawF8fBBvvsktcInIz3m'"
+      style="display: flex; align-items: center; gap: 8px; padding: 10px 20px; background-color: #25D366; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold;">
+      <i class="fas fa-bullhorn" style="font-size: 20px;"></i>
+      Únete al Canal Oficial
     </button>
   </div>
 
   <header class="header">
     <h1 class="logo">
-      <i class="fas fa-music"></i> PlayYoutube By Wirk
+      <i class="fas fa-music"></i> PlayYoutube By Wirk 👻
     </h1>
     <button id="menu-button" class="menu-button">☰</button>
   </header>
 
   <div class="container">
     <form id="search-form">
-      <input type="text" id="search-input" placeholder="¡Busca tu música favorita ahora! 🎧" required />
+      <input type="text" id="search-input" placeholder=" ¡Busca tu música favorita ahora! 🎧" required />
       <button type="submit">Buscar</button>
     </form>
 
@@ -180,7 +172,7 @@
         <span></span><span></span><span></span><span></span><span></span><span></span>
         <span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
-      <p id="loading-text" style="color: #064420;">Buscando...</p>
+      <p id="loading-text">Buscando...</p>
     </div>
 
     <div class="music-list" id="music-list"></div>
@@ -195,8 +187,13 @@
     const sideMenu = document.getElementById("side-menu");
     const audioPlayer = document.getElementById("audio-player");
 
-    menuBtn.onclick = () => sideMenu.classList.add("open");
-    closeBtn.onclick = () => sideMenu.classList.remove("open");
+    menuBtn.onclick = () => {
+      sideMenu.classList.add("open");
+    };
+
+    closeBtn.onclick = () => {
+      sideMenu.classList.remove("open");
+    };
 
     function reproducirCancion(url) {
       audioPlayer.src = url;
@@ -208,6 +205,7 @@
       audioPlayer.style.display = "none";
     });
 
+    // ANIMACIÓN DE CARGA
     const loadingText = document.getElementById('loading-text');
     let dotCount = 0;
     /*
@@ -218,5 +216,6 @@
     }, 500);
     */
   </script>
+
 </body>
 </html>
